Changes to elements
Replaced the heading elements, brought down the closing main tag and added a section for employment history.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 			<main>
 				<h1>About Me</h1>
 					<p>Hello potential employers! I'm your typical Sally girl that loves: long walks on the grid, Html, and being awesome. Now I will pursuade you into hiring me!</p>
-			</main>
 		<address>
 				<h1>Contact Information</h1>
 			<ul>
@@ -21,31 +20,32 @@
 			</ul>
 		</address>
 			<section>
-				<ul>
-					<h1>Education</h1>
-						<li><strong>2015 to 2017 Thinkful University of the Arts</strong></li>
+					<h2>Education</h2>
+						<p><strong>2015 to 2017 Thinkful University of the Arts</strong></p>
 						<!--Work on the alignment of this text-->
-						<li><strong>Thinkful High School</strong></li>
-						<li><strong>Thinkful Middle School</strong></li>
+						<p><strong>Thinkful High School</strong></p>
+						<p><strong>Thinkful Middle School</strong></p>
+				<section>
 					<h1>Employment History</h1>
-						<h2>Google</h2>
-							<h3>Software Developer</h3>
-							<h3>2010 to 2017</h3>
-							<h3>Duties</h3>
+						<p>Google</p>
+							<p>Software Developer-2010 to 2017</p>
+							<p>Duties</p>
 						<ul>
 							<li>Learning Html</li>
 							<li>Google top secret articles</li>
 						</ul>
 						<h2>Facebook</h2>
-							<h3>Software Developer</h3>
-							<h3>2000 to 2010</h3>
-							<h3>Duties</h3>
+							<p>Software Developer</p>
+							<p>2000 to 2010</p>
+							<p>Duties</p>
 						<ul>
 							<li>Update facebook profiles</li>
 							<li>Lorem ipsum</li>
 						</ul>
 
-				</ul>
+				
+
 			</section>
+		</main>
 </body>
 </html>
